# mdverse_data_catalogue

./: .bandit.yaml  .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  Dockerfile  LICENSE  README.md  compose.yaml  compose.yml  pyproject.toml  ruff.toml  run_all.sh
.github/workflows/: ci.yml
app/frontend/: controller.py  service.py
app/frontend/datasets/: service.py
app/frontend/file_types/: service.py
docs/: database_schema.md  figshare.md  nmrlipids.md  osf.md  zenodo.md
mdverse-database/: gitignore  pyproject.toml  report.py  schema.md
mdverse-database/src/: create_database.py  db_schema.py  download_data.py  ingest_data.py  ingest_param_files.py  ingest_topol_files.py  ingest_traj_files.py  query.py
notebooks/: analyze_gromacs_mdp_files.ipynb  scraper_stats.ipynb  stats.ipynb
scripts/: scrape_all.sh  scrape_all_debug.sh
src/mdverse/: __init__.py
src/mdverse/core/: __init__.py
src/mdverse/database/: create_database.py  database.py  database_schema.sql  delete_data.py  delete_data_SQlite3.py  download_data.py  ingest_data.py  ingest_topol_files.py  query.py
src/mdverse/models/: __init__.py  dataset.py  scraper.py  simulation.py
src/mdverse/scrapers/: __init__.py  atlas.py  cli.py  figshare.py  figshare_api.py  gpcrmd.py  mddb.py  network.py  nomad.py  stats.py  toolbox.py  zenodo.py
static/: style.css
templates/: about_page.html  base.html  dataset_files_all_table.html  datasets_page.html  index_page.html  xtc_files_table.html
tests/database/: test_database.py
tests/models/: test_dataset.py  test_file.py  test_scraper.py  test_simulation.py  test_simulation_molecule.py
tests/scrapers/: test_figshare.py  test_network.py  test_toolbox.py
webapp/: .gitignore  README.md  compose.yaml  pyproject.toml  test_queries.py
webapp/app/: dependencies.py  main.py
webapp/app/frontend/: controller.py  service.py
webapp/app/frontend/datasets/: controller.py  service.py
webapp/app/frontend/file_types/: controller.py  service.py
webapp/static/: style.css
webapp/templates/: about_page.html  base.html  dataset_files_page.html  dataset_info.html  datasets_page.html  file_types_download_info.html  file_types_page.html  gro_files_page.html  gro_files_table.html  index_page.html  mdp_files_page.html  mdp_files_table.html
