[project]
name = "mdverse-data-catalogue"
version = "0.1.0"
description = "MDverse data catalogue"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Pierre Poulain", email = "pierre.poulain@cupnet.net" },
    { name = "Essmay Touami", email = "essmay.touami@etu.u-paris.fr" },
    { name = "Salahudin Sheikh", email = "sheikh@ibpc.fr"}
]
maintainers = [
    { name = "Pierre Poulain", email = "pierre.poulain@cupnet.net" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "parquet-tools>=0.2.16",
    "pooch>=1.8.2",
    "pydantic>=2.12.4",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "mdverse-scrapers",
    "mdverse-models",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.1",
    "plotly>=6.0.0",
    "prek>=0.3.2",
    "pysankeybeta>=1.4.2",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "upsetplot>=0.9.0",
    "watermark>=2.5.0",
]

[tool.uv.sources]
mdverse-scrapers = { workspace = true }
mdverse-models = { workspace = true }

[tool.uv.workspace]
members = [ "packages/*" ]

