[project]
name = "mdverse"
version = "0.1.0"
description = "MDverse data catalogue"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Giulia Di Gennaro", email = "giuliadgm05@gmail.com" },
    { name = "Essmay Touami", email = "essmay.touami@etu.u-paris.fr" },
    { name = "Salahudin Sheikh", email = "sheikh@ibpc.fr"},
    { name = "Pierre Poulain", email = "pierre.poulain@cupnet.net" }
]
maintainers = [
    { name = "Pierre Poulain", email = "pierre.poulain@cupnet.net" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "parquet-tools>=0.2.16",
    "pooch>=1.8.2",
    "pydantic>=2.12.4",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "beautifulsoup4>=4.14.3",
    "pycurl>=7.45.7",
    "selenium>=4.40.0",
    "httpx[http2]>=0.28.1",
    "certifi>=2026.1.4",
    "html5lib>=1.1",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "tqdm>=4.67.3",
    "sqlmodel>=0.0.37",
    "fastparquet>=2025.12.0",
    "bokeh>=3.9.0",
    "fastapi[standard]>=0.136.0",
    "jinja2>=3.1.6",
    "uvicorn>=0.45.0",
    "cachetools>=7.0.6",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.1",
    "plotly>=6.0.0",
    "prek>=0.3.2",
    "pysankeybeta>=1.4.2",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "upsetplot>=0.9.0",
    "watermark>=2.5.0",
]

[project.urls]
Homepage = "https://mdverse.eu/"
Repository = "https://github.com/mdverse/MDverse/mdverse_data_catalogue"
Issues = "https://github.com/MDverse/MDverse/mdverse_data_catalogue/issues"
Changelog = "https://github.com/MDverse/MDverse/mdverse_data_catalogue/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9.22,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
# Scrapers
scrape-zenodo = "mdverse.scrapers.zenodo:main"
scrape-figshare = "mdverse.scrapers.figshare:main"
scrape-nomad = "mdverse.scrapers.nomad:main"
scrape-atlas = "mdverse.scrapers.atlas:main"
scrape-gpcrmd = "mdverse.scrapers.gpcrmd:main"
scrape-mddb = "mdverse.scrapers.mddb:main"
get-scrapers-stats = "mdverse.scrapers.stats:main"
# Database
database-create = "mdverse.database.create_database:main"
database-ingest = "mdverse.database.ingest_data:main"
database-report = "mdverse.database.report:main"
database-query = "mdverse.database.query:main"
