[project]
name = "mdde2"
version = "0.1.0"
description = "MDverse Data Explorer"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Giulia Di Gennaro", email = "giuliadgm05@gmail.com"},
    {name = "Pierre Poulain", email = "pierre.poulain@cupnet.net"}
]
maintainers = [
    {name = "Pierre Poulain", email = "pierre.poulain@cupnet.net"}
]
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.6.3",
    "fastapi>=0.115.8",
    "jinja2>=3.1.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
    "wordcloud>=1.9.4",
]

[tool.ruff.lint]
# Ruff rules: https://docs.astral.sh/ruff/rules/
select = [
    "F",    # pyflakes
    "E",    # pycodestyle Error
    "W",    # pycodestle Warning
    "I",    # isort
    "B",    # bugbear
    "C90",  # mccabe
    "N",    # pep8-naming
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.115.8",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]
